<?xml version="1.0"?>
<package>
  <name>rbiz_autorace_monitor</name>
  <version>0.0.1</version>
  <description>
     rbiz_autorace_monitor
  </description>
  <author email="rwjung@robotis.com">Leon Ryuwoon Jung</author>
  <maintainer email="rwjung@robotis.com">Leon Ryuwoon Jung</maintainer>
  <author>Leon Jung</author>
  <license>BSD</license>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>qt_build</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>libqt4-dev</build_depend>
  <run_depend>qt_build</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>libqt4-dev</run_depend>
</package>
